--- a/index.html
+++ b/index.html
@@ -4731,7 +4731,7 @@ if (btn) {
 (function(){
   // Tetapan
   const POLL_MS = window.NADI_POLL_MS || 2000; // setiap 2s
-  const GAS_URL  = window.GAS_WEB_APP_URL || ""; // letak URL Web App jika host di GitHub Pages
+  const GAS_URL  = window.GAS_WEB_APP_URL || "https://script.google.com/macros/s/AKfycbx6TKE0vDDPO3-36cY7xjacAbGL0HIRKCrORNm-sED9y5NpIeIUk9gyrpiWy-S7vbc/exec"; // letak URL Web App jika host di GitHub Pages
   const tbody    = document.querySelector("#nadiContainer");
   const titleEl  = document.querySelector("#nadiProgramTitle");
   const dateEl   = document.querySelector("#nadiProgramDate");
